--- a/gps/gps.conf
+++ b/gps/gps.conf
@@ -1,8 +1,15 @@
 #Uncommenting these urls would only enable
 #the power up auto injection and force injection(test case).
-XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
-XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+#XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra2.bin
+#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
+#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+
+#ifdef VENDOR_EDIT 
+# zuoyonghua@oneplus.cn add gps xtra server for speed up gps cold start 
+XTRA_SERVER_1=http://xtrapath1.izatcloud.net/xtra3grc.bin 
+XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra3grc.bin 
+XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra3grc.bin 
+#endif
 
 #Version check for XTRA
 #DISABLE = 0
@@ -98,7 +105,7 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-LPP_PROFILE = 3
+LPP_PROFILE = 2
 
 ################################
 # EXTRA SETTINGS
@@ -114,4 +121,8 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+#ifndef zuoyonghua@oneplus.cn enable all bit mask for GLONASS
+#A_GLONASS_POS_PROTOCOL_SELECT = 0
+#else 
+A_GLONASS_POS_PROTOCOL_SELECT = 15
+#endif
